Fix footer so it wraps on smaller resolutions

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -33,7 +33,7 @@ nav {
 	flex-flow: row nowrap;
 	justify-content: center;
 	align-items: center;
-	gap: 5em;
+	gap: var(--body-spacing);
 }
 
 nav div { display: flex; gap: 2em; justify-content: center; }
@@ -48,16 +48,13 @@ nav a:hover { text-decoration: underline; }
 footer {
 	margin-top: var(--body-spacing);
 	width: 100%;
-	display: flex;
-	flex-flow: column nowrap;
-	gap: 0.75em;
 }
 
 footer > div:not(.italy-flag) {
 	display: flex;
-	flex-flow: row nowrap;
+	flex-flow: row wrap;
 	justify-content: space-between;
-	padding-top: 1em;
+	padding: 1em 1em 0 1em;
 	max-width: var(--content-width);
 	margin: auto;
 	width: 100%;
@@ -67,4 +64,4 @@ footer nav {
 	margin: unset;
 	display: flex;
 	gap: 2em;
-  }
+}
